--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,10 @@ openmeteo-requests = "^1.3.0"
 requests-cache = "^1.2.1"
 pandas = "^2.2.3"
 pytest = "^8.3.3"
+django = "^5.1.3"
+pylint = "^3.3.1"
+seaborn = "^0.13.2"
+django-bootstrap5 = "^24.3"
 
 
 [build-system]
